# ccbs

./: .gitignore  CMakeLists.txt  Doxyfile  ccbs_main.cpp  ccbs_pkg.ccbs.hpp  main.hpp
asd b/: asd.hpp
dirs/: CMakeLists.txt  main.cpp
include/ccbs/: ccbs.hpp
include/ccbs/compiler/: compiler.hpp  gcc.hpp
include/ccbs/dirs/: options.hpp  pragmas.hpp
include/ccbs/package/: CMakeFindPackageMode.cmake  build_package.hpp  cmake_find_package.hpp  cmake_package.hpp  installed_package.hpp  package.hpp  package_flags.hpp  pkg_config_package.hpp  repository.hpp
include/ccbs/rule/: build_package.hpp  dependency_rule.hpp  find_utils.hpp  link_rule.hpp  rule.hpp  ruleset.hpp  timestamp.hpp
include/ccbs/util/: containers.hpp  find_utils.hpp  polymorphic_value.hpp  visitors.hpp
lib/: CMakeLists.txt  ccbs_main.cpp
lib/dirs/: options.cpp  pragmas.cpp
lib/package/: build_package.cpp  cmake_find_package.cpp  cmake_package.cpp  installed_package.cpp  package_flags.cpp  repository.cpp
lib/rule/: build_package.cpp  dependency_rule.cpp  find_utils.cpp  link_rule.cpp  rule.cpp  ruleset.cpp
lib/util/: find_utils.cpp
package/: build_package.cpp  build_package.hpp  cmake_package.cpp  cmake_package.hpp  installed_package.cpp  installed_package.hpp  package.hpp  package_flags.hpp  pkg_config_package.hpp  repository.cpp  repository.hpp
program/: CMakeLists.txt  main.cpp
rule/: dependency_rule.cpp  dependency_rule.hpp  find_utils.cpp  find_utils.hpp  rule.cpp  rule.hpp  timestamp.hpp
